2009-04-08  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Use a single IAssemblyResolver
	  shared amongst all AssemblyDefinitions to resolve assembly/type
	  references with Cecil.  Otherwise, if we have deeply nested
	  directories with cross-directory assembly dependencies, then Cecil
	  won't find the necessary assemblies (e.g. b/bin/Debug/b.dll has a
	  type which inherits from a/bin/Debug/a.dll -- here, we'll have two
	  separate AssemblyDefinitions, and when b.dll's AssemblyDefinition
	  tries to resolve types from a.dll, it fails).
	  See: http://lists.ximian.com/pipermail/mono-devel-list/2009-April/031646.html

2009-03-29  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/exceptions.cs: Add
	  ExceptionLocations.AddedMember, used for --exceptions=added support.
	* Mono.Documentation/monodocer.cs: Add --exceptions=added, which will 
	  only add <exception/> elements for newly added elements.  This is
	  useful for updating documentation for established projects which
	  already have <exception/> corrections (e.g. *removal* of
	  <exception/> elements because the exceptions weren't actually
	  possible), so only new members should have <exception/> created.

2009-03-20  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Perform the timestamp check for
	  the top-level and namespace-level index files.

2009-03-21  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Be nice to make,
	  mdoc-export-html, and other apps that use file timetamps: if the 
	  file contents haven't changed after the update, don't replace the
	  "original" file.  This preserves file timestamps, thus allowing
	  other apps to behave nicely (e.g. mdoc-export-html won't update all
	  documentation after running mdoc-update, as the files won't change
	  unless something has *actually* changed).

2009-03-20  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Do as make(1) does: if the